[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liouss-python-toolkit"
version = "1.2.0"
description = "Liouss' Python Toolkit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["colorama"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = { where = ["src"] }